# fcitx5-vnkey

./: .clang-format  CMakeLists.txt  Makefile  README.md  build-deb.sh
.github/workflows/: ci.yml
addon/: CMakeLists.txt  fcitx5.desktop  keymap.cpp  keymap.h  vnkey-addon.conf  vnkey.conf  vnkey.conf.in  vnkey.cpp  vnkey.h
core/: CMakeLists.txt
core/include/: chars.hpp  engine.hpp  input_method.hpp  keyinput.hpp  syllable.hpp
core/src/: engine.cpp  syllable.cpp
core/src/methods/: telex.cpp
packaging/debian/: changelog  control  copyright  rules
tests/integration/: intergration.cpp  intergration.h
tests/unit/: CMakeLists.txt  main.cpp  test_engine.cpp  test_helpers.h  test_telex.cpp
